Replace guava immutable collections with java immutable collections (#2454)